--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "18.1.0",
     "react-hook-form": "^7.42.1",
     "react-native": "0.70.5",
+    "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
