--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/material-top-tabs": "^6.6.0",
-    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native": "^6.1.5",
     "@react-navigation/native-stack": "^6.9.8",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~47.0.12",
-    "expo-av": "~13.0.2",
+    "expo-av": "^13.0.3",
     "expo-image-picker": "~14.0.2",
     "expo-screen-orientation": "~5.0.1",
     "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
+    "react": "^18.1.0",
     "react-hook-form": "^7.42.1",
-    "react-native": "0.70.5",
+    "react-native": "^0.70.5",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
