--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
     "react": "^18.1.0",
     "react-hook-form": "^7.42.1",
     "react-native": "^0.70.5",
+    "react-native-elements": "^3.4.3",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "eslint": "^8.31.0",
+    "@babel/core": "^7.21.0",
+    "eslint": "^8.35.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
-    "prettier": "^2.8.2"
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.4"
   },
   "private": true
 }
