--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-image-picker": "~14.0.2",
     "expo-screen-orientation": "~5.0.1",
     "expo-status-bar": "~1.4.2",
+    "lottie-react-native": "^5.1.5",
     "react": "^18.1.0",
     "react-hook-form": "^7.42.1",
     "react-native": "^0.70.5",
