--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "expo-image-picker": "~14.0.2",
     "expo-screen-orientation": "~5.0.1",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-hook-form": "^7.42.1",
+    "react-moment": "^1.1.3",
     "react-native": "^0.70.5",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-virtualized-view": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
