--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -17,14 +17,15 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@tanstack/react-query": "^4.26.1",
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~47.0.12",
     "expo-av": "^13.0.3",
     "expo-image-picker": "~14.0.2",
     "expo-screen-orientation": "~5.0.1",
     "expo-status-bar": "~1.4.2",
-    "moment": "^2.29.4",
     "lottie-react-native": "^5.1.5",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-hook-form": "^7.42.1",
     "react-moment": "^1.1.3",
