--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "@tanstack/react-query": "^4.26.1",
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~47.0.12",
-    "expo-av": "^13.0.3",
+    "expo-av": "~13.0.3",
     "expo-image-picker": "~14.0.2",
     "expo-screen-orientation": "~5.0.1",
     "expo-status-bar": "~1.4.2",
-    "lottie-react-native": "^5.1.5",
+    "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-hook-form": "^7.42.1",
     "react-moment": "^1.1.3",
     "react-native": "^0.70.5",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
